improve get /accounts endpoint
